# amazon-denseclus

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  environment.yaml  notes.MD  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: cd.yml  ci.yml  linter.yml  tests.yml
denseclus/: DenseClus.py  __init__.py  __version__.py  categorical.py  numerical.py  utils.py
docs/: conf.py  index.rst
docs/_build/: genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/_sources/: index.rst.txt
docs/_build/_static/: alabaster.css  documentation_options.js  nbsphinx-code-cells.css
docs/rst/: 01_DenseClusExampleNB.rst  02_TuningWithHDBSCAN.rst  03_ValidationForUMAP.rst
notebooks/: 01_DenseClusExampleNB.ipynb  02_TuningWithHDBSCAN.ipynb  03_ValidationForUMAP.ipynb  04_JumpstartDenseClus.ipynb  DenseClus Example NB.ipynb  DenseClusExampleNB.ipynb  DenseClusImplentation.ipynb  JumpstartDenseClus.ipynb  Tuning with HDBSCAN.ipynb  TuningwithHDBSCAN.ipynb  Validation For UMAP.ipynb
tests/: categorical_test.py  conftest.py  denseclus_test.py  numerical_test.py  utils_test.py  validation_test.py
