[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# See configuration details in https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"


[tool.codespell]
check-filenames = true
check-hidden = true
skip = '.git,*.yaml,*.ipynb'

[tool.black]
line-length = 100
target-version = ['py310']
required-version = '23.11.0'
exclude = '''
(
    asv_bench/env
  | \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | setup.py
)
'''

[tool.ruff]
line-length = 100
target-version = "py311"
fix = true
unfixable = []
select = ["E", "W"]
ignore = ["E203", "E231", "E402", "E712", "F401","E501"]
exclude = [
    '.git',
    '__pycache__',
    '.*_cache',
    'examples/',
    '.tox',
    'data/',
    'notebooks/',
    'docs/',
    'models/',
    'venv/',
    '.venv/'
]



[tool.ruff.flake8-annotations]
mypy-init-return = true


[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.isort]
combine-as-imports = true

[tool.bandit]
skips = ["B404","B603", "B403"]

[tool.mypy]
ignore_missing_imports = true
show_error_codes = true
files = "**/*.py"
exclude = [
    '^docs/.*',
    '^build/.*',
    '^venv/.*',
    '^notebooks/.*',
    '^src/my_nb_color.py',
]

[tool.pytest.ini_options]
addopts = "--cov=denseclus --cov-report=term-missing"
markers = [
    "fast",
    "slow"
]

[tool.pytest]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "ELLIPSIS",
    "NUMBER",
]
filterwarnings = [
   "ignore::UserWarning"
]

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "too-many-arguments",
    "not-callable",
    "W0201",
    "C0301",
    "R0913"
]
