[build-system]
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "no-guess-dev"

[tool.codespell]
check-filenames = true
check-hidden = true
skip = '.git,*.yaml,*.ipynb'

[tool.black]
line-length = 100
target-version = ['py310']
exclude = '''
(
  asv_bench/env
  | \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | setup.py
)
'''

[tool.ruff]
line-length = 100
target-version = "py311"
fix = true
unfixable = []
select = ["E", "W"]
ignore = ["E203", "E231", "E402", "E712", "F401","E501"]
exclude = [
  '.git',
  '__pycache__',
  '.*_cache',
  'examples/',
  '.tox',
  'data/',
  'notebooks/',
  'docs/',
  'models/',
  'venv/',
  '.venv/'
]

[tool.ruff.lint]
# Bugbear configs, see: https://docs.astral.sh/ruff/configuration/
select = ["E4", "E7", "E9", "F", "B"]
ignore = ["E501"]
unfixable = ["B"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]


[tool.ruff.format]
# Black like formatting
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.flake8]
select = ["E", "W"]
ignore = ["E203", "E231", "E402", "E712", "F401","E501"]
plugins = ["flake8-bugbear", "mccabe"]

[tool.autoflake]
remove-all-unused-imports = true
remove-unused-variables = true

[tool.flake8-annotations]
mypy-init-return = true

[tool.pydocstyle]
convention = "google"

[tool.bandit]
skips = ["B404","B603", "B403"]

[tool.mypy]
ignore_missing_imports = true
show_error_codes = true
files = "**/*.py"
exclude = [
  '^docs/.*',
  '^build/.*',
  '^venv/.*',
  '^notebooks/.*',
  '^src/my_nb_color.py',
]

[tool.pytest.ini_options]
addopts = "--cov=denseclus --cov-report=term-missing"
markers = [
  "fast",
  "slow"
]

[tool.pytest]
doctest_optionflags = [
  "NORMALIZE_WHITESPACE",
  "ELLIPSIS",
  "NUMBER",
]
filterwarnings = [
 "ignore::UserWarning"
]

[tool.pylint.'MESSAGES CONTROL']
disable = [
  "too-many-arguments",
  "not-callable",
  "W0201",
  "C0301",
  "R0913"
]
